test/lit/pto/fixpipe_frontend_verify_tpop_split_invalid_a5.pto
// Copyright (c) 2026 Huawei Technologies Co., Ltd.
// This program is free software, you can redistribute it and/or modify it under the terms and conditions of
// CANN Open Software License Agreement Version 2.0 (the "License").
// Please refer to the License for details. You may not use this file except in compliance with the License.
// THIS SOFTWARE IS PROVIDED ON AN "AS IS" BASIS, WITHOUT WARRANTIES OF ANY KIND, EITHER EXPRESS OR IMPLIED,
// INCLUDING BUT NOT LIMITED TO NON-INFRINGEMENT, MERCHANTABILITY, OR FITNESS FOR A PARTICULAR PURPOSE.
// See LICENSE in the root of the software repository for the full text of the License.
//
// RUN: not ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s

module {
  func.func @cube_kernel() attributes {pto.kernel_kind = #pto.kernel_kind<cube>} {
    %c0_i32 = arith.constant 0 : i32
    %c2v_import = pto.import_reserved_buffer {
      name = "c2v_fifo",
      peer_func = @vector_kernel
    } -> i32

    pto.aic_initialize_pipe {
      id = 0,
      dir_mask = 1,
      slot_size = 1024,
      nosplit = true,
      acc_push_epilogue =
          #pto.acc_push_epilogue<layout = nz2nd, quant = no_convert, relu = no_relu>
    }
      (c2v_consumer_buf = %c2v_import : i32,
       v2c_consumer_buf = %c0_i32 : i32)
    return
  }

  func.func @vector_kernel() attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
    %c0_i32 = arith.constant 0 : i32
    %c2v_local = pto.reserve_buffer {
      name = "c2v_fifo",
      size = 4096,
      location = #pto.address_space<vec>,
      auto = true
    } -> i32

    pto.aiv_initialize_pipe {
      id = 0,
      dir_mask = 1,
      slot_size = 1024,
      nosplit = true,
      acc_push_epilogue =
          #pto.acc_push_epilogue<layout = nz2nd, quant = no_convert, relu = no_relu>
    }
      (c2v_consumer_buf = %c2v_local : i32,
       v2c_consumer_buf = %c0_i32 : i32)

    %recv = pto.tpop_from_aic {id = 0, split = 1}
      -> !pto.tile_buf<loc=vec, dtype=f32, rows=16, cols=16, v_row=16, v_col=16, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    return
  }
}

// CHECK: error: 'pto.tpop_from_aic' op expects fixpipe TPOP to have split = 0
